# bc-fastapi-3407182-nicolasvargas

./: README.md
proyecto/starter/: Dockerfile  pyproject.toml
proyecto/starter/src/: main.py
starter/: docker-compose.yml
