# ============================================
# PYPROJECT.TOML - Proyecto API de Centro de call center
# ============================================

[project]
name = "greeting-api"
version = "1.0.0"
description = "API de Centro de call center - Proyecto Semana 01"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "fastapi[standard]==0.128.0",
]